[tool.poetry]
name = "awesome-cli"
version = "0.1.3"
description = "Awesome CLI search"
authors = ["Louie Lu <git@louie.lu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mlouielu/awesome-cli"

[tool.poetry.dependencies]
python = "^3.7"
mistune = "^0.8.4"
lxml = "^4.6.3"
colorful = "^0.5.4"
cleo = "^0.8.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
awesome-cli = 'awesome_cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
